DONE: RELATIONSHIPS Category, Product, Page

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "bezhansalleh/filament-shield": "^1.1",
         "doctrine/dbal": "^3.3",
         "filament/filament": "^2.0",
+        "filament/spatie-laravel-media-library-plugin": "^2.0",
         "flowframe/laravel-trend": "^0.1.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.11",
